update app layout

--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -1,25 +1,27 @@
-<div fxLayout="row" fxLayoutAlign="space-around start">
-  <div fxLayout="column" fxLayoutAlign="start " class="margin-top-3">
+<div fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutAlign.gt-sm="space-around start" fxLayoutAlign.lt-md="space-between center">
+  <div fxLayout="column" fxLayoutAlign="center center" class="margin-top-3">
     <h1> All Bookings </h1>
-    <p *ngIf="bookings.length === 0">You don't have any bookings! </p>
+    <div *ngIf="bookings.length === 0">
+      <p>You don't have any bookings! </p>
+      <button mat-raised-button routerLink="/tour/all" class="margin-top-6"> Explore popular destinations </button>
+    </div>
 
-    <mat-card fxLayout="column" 
-    fxLayoutAlign="start " 
-    class="margin-top-3"  
-    *ngFor="let booking of bookings ; let i = index">
-      <mat-card-title>
-        {{booking.tour.name}}
-      </mat-card-title>
-      <mat-card-content>
-        <div> Ratings: {{booking.tour.rating}} </div>
-        <div> Price: {{booking.tour.price}} $ </div>
-        <button mat-raised-button (click)="removeTour(i)">Cancel this booking</button>
-      </mat-card-content>
-    </mat-card>
+    <div *ngIf="bookings.length > 0">
+      <mat-card fxLayout="column" fxLayoutAlign="start " class="margin-top-3" *ngFor="let booking of bookings ; let i = index">
+        <mat-card-title>
+          {{booking.tour.name}}
+        </mat-card-title>
+        <mat-card-content>
+          <div> Ratings: {{booking.tour.rating}} </div>
+          <div> Price: {{booking.tour.price}} $ </div>
+          <button mat-raised-button (click)="removeTour(i)">Cancel this booking</button>
+        </mat-card-content>
+      </mat-card>
+    </div>
 
   </div>
 
-  <div fxLayout="column" fxLayoutAlign="start " class="margin-top-3">
+  <div fxLayout="column" fxLayoutAlign="start " class="margin-top-3" *ngIf="bookings.length > 0">
     <mat-card>
       <mat-card-title>
         Payment
@@ -28,7 +30,7 @@
         Amount: {{amount}} $
       </mat-card-subtitle>
     </mat-card>
-    <button mat-raised-button color="primary" class="margin-top-3">
+    <button mat-raised-button class="margin-top-3">
       Check out
     </button>
     <div class="margin-top-3">
