--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,22 +1,57 @@
-<div fxLayout.gt-sm="row" fxLayout.lt-md="column" 
-fxLayoutAlign.gt-sm="space-around none"
-ngClass.gt-sm="footer">
-  <div fxLayout="column" fxLayoutAlign.lt-md="center center" ngClass.gt-sm="margin-1">
-      <div class="subtitle">Help</div>
-      <div>Contact us</div>
-      <div>FAQs</div>
-      <div>Terms of use</div>
-  </div>
-  <mat-divider fxHide.gt-sm="true"></mat-divider>
-  <div fxLayout="column" fxLayoutAlign.lt-md="center center" ngClass.gt-sm="margin-1">
-      <div class="subtitle">About us</div>
-      <div>Blog</div>
-      <div>Press</div>
-  </div>
-  <mat-divider fxHide.gt-sm="true"></mat-divider>
-  <div fxLayout="column" fxLayoutAlign.lt-md="center center" ngClass.gt-sm="margin-1">
-      <div class="subtitle">Get the app</div>
-      <div>iOS app</div>
-      <div>Android app</div>
-  </div>
+<!-- for big screen -->
+<div fxHide.lt-md="true" fxLayout="row" fxLayoutAlign="space-around none" class="footer">
+    <div fxLayout="column" class="margin-1">
+        <div class="subtitle">Help</div>
+        <div>Contact us</div>
+        <div>FAQs</div>
+        <div>Terms of use</div>
+    </div>
+    <mat-divider fxHide.gt-sm="true"></mat-divider>
+    <div fxLayout="column" class="margin-1">
+        <div class="subtitle">About us</div>
+        <div>Blog</div>
+        <div>Press</div>
+    </div>
+    <mat-divider fxHide.gt-sm="true"></mat-divider>
+    <div fxLayout="column" class="margin-1">
+        <div class="subtitle">Get the app</div>
+        <div>iOS app</div>
+        <div>Android app</div>
+    </div>
 </div>
+
+<!-- for small screen -->
+<mat-accordion fxHide.gt-sm="true">
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Help
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div>Contact us</div>
+        <div>FAQs</div>
+        <div>Terms of use</div>
+    </mat-expansion-panel>
+    <mat-divider fxHide.gt-sm="true"></mat-divider>
+
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                About us
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div>Blog</div>
+        <div>Press</div>
+    </mat-expansion-panel>
+    <mat-divider fxHide.gt-sm="true"></mat-divider>
+
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Get the app
+            </mat-panel-title>
+        </mat-expansion-panel-header>
+        <div>iOS app</div>
+        <div>Android app</div>
+    </mat-expansion-panel>
+</mat-accordion>
