--- a/src/app/tour/daily-deals/daily-deals.component.html
+++ b/src/app/tour/daily-deals/daily-deals.component.html
@@ -1,4 +1,4 @@
-<div class="daily-deals" fxLayout="column">
+<div class="daily-deals" fxLayout="column" >
 
   <app-search></app-search>
   
@@ -12,7 +12,7 @@
   </div>
 
   <div fxLayout="row wrap" fxLayoutAlign="space-between none">
-    <mat-card *ngFor="let tour of (toursToShow$ | async)" fxFlex.lt-sm="100%" fxFlex.lt-md="45%" fxFlex="30%" class="discounted-tours">
+    <mat-card *ngFor="let tour of (toursToShow$ | async)" fxFlex.lt-md="98%" fxFlex.gt-sm="49%" class="discounted-tours">
       <mat-card-header>
         <mat-card-title [routerLink]="['/tour-details', tour._id]" class="tour-name">{{tour.name}} </mat-card-title>
         <mat-card-subtitle>Available seats: {{tour.availableSeats}} </mat-card-subtitle>
