--- a/src/app/booking/booking.component.css
+++ b/src/app/booking/booking.component.css
@@ -1,7 +1,21 @@
-.margin-top-3 {
-    margin-top: 3%
+.margin-3 {
+    margin-top: 3%;
+    margin-bottom: 3%;
+}
+
+.margin-2 {
+    margin-top: 2%;
+    margin-bottom: 2%;
 }
 
 .margin-top-6 {
     margin-top: 6%
+}
+
+.cursor {
+    cursor: pointer;
+}
+
+.yellow {
+    background-color: rgb(252, 220, 160);
 }
