--- a/src/app/tour/tour-details/tour-details.component.html
+++ b/src/app/tour/tour-details/tour-details.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div fxLayout.gt-sm="row" fxLayout.lt-md="column" fxLayoutAlign.gt-sm="space-between start" fxLayoutAlign.lt-md="none none">
-        <div fxFlex.gt-sm="65" fxFlex.lt-sm>
+        <div fxFlex.gt-sm="66" fxFlex.lt-sm  class="margin-bottom-4">
             <div>
                 <h1> {{selectedTour.name}} | {{selectedTour.price}} $ </h1>
                 <div> {{selectedTour.tourType}}</div>
@@ -59,7 +59,7 @@
 
         </div>
 
-        <div fxFlex.gt-sm="25" fxFlex.lt-sm>
+        <div fxFlex.gt-sm="33" fxFlex.lt-sm  class="margin-bottom-4">
             <div>
                 <h2>
                     Other tours
@@ -68,7 +68,7 @@
             <div>
                 <div *ngFor="let tour of similarTours" class="margin-2">
                     <mat-card class="tour-info">
-                        <mat-card-header class="pointer" (click)="viewTour(tour)">
+                        <mat-card-header class="pointer" (click)="viewTour(tour)" >
                             {{tour.name}}
                         </mat-card-header>
                         <mat-card-content>
