--- a/src/app/tour/tour.component.html
+++ b/src/app/tour/tour.component.html
@@ -11,20 +11,17 @@
 
     <div fxLayout="column" fxFlex>
       <div fxLayout="column" fxLayoutAlign="space-between none" class="no-margin">
-        <mat-card class="title">
+        <mat-card class="yellow">
           {{title}}
         </mat-card>
       </div>
 
       <mat-card *ngFor="let tour of (toursToShow$ | async)">
         <mat-card-header>
-          <mat-card-title [routerLink]="['/tour-details', tour._id]" class="tour-name">{{tour.name}} </mat-card-title>
-          <mat-card-subtitle>Available seats: {{tour.availableSeats}} </mat-card-subtitle>
-          <mat-card-content>
-            <p> {{tour.rating}} stars </p>
-            <p> {{tour.price}} $ </p>
-            <p> Discount -{{tour.discount}}% </p>
-          </mat-card-content>
+          <mat-card-title [routerLink]="['/tour-details', tour._id]" class="tour-name">{{tour.name}} | {{tour.price}} $</mat-card-title>
+          <mat-card-subtitle>
+            Available seats: {{tour.availableSeats}} | {{tour.rating}} stars | Discount -{{tour.discount}}%
+          </mat-card-subtitle>
         </mat-card-header>
         <img src="{{tour.imageUrl}}" alt="Photo of tour {{tour.name}}">
         <mat-card-content>
@@ -35,6 +32,14 @@
           <button mat-button (click)="bookTour(tour)"> Book Tour {{tour.name}} </button>
         </mat-card-actions>
       </mat-card>
+      <div *ngIf="!(toursToShow$ | async).length" fxLayout="column" fxLayoutAlign="center center">
+        <p> Sorry, there's no tours to the destination on that day. </p>
+        <p> Please choose another day or destination. </p>
+        <button mat-raised-button routerLink="/tour/all" class="margin-3 yellow">
+          Or explore popular destinations
+        </button>
+      </div>
+
       <!-- <button mat-button (click)="addTour()">Create Tour</button> -->
       <button *ngIf="onLoadMoreTour" mat-button (click)="loadMoreTours()">Load more tours</button>
 
@@ -47,19 +52,16 @@
       <app-filter></app-filter>
     </div>
 
-    <mat-card class="title">
+    <mat-card class="yellow">
       {{title}}
     </mat-card>
 
     <mat-card *ngFor="let tour of (toursToShow$ | async)">
       <mat-card-header>
-        <mat-card-title [routerLink]="['/tour-details', tour._id]" class="tour-name">{{tour.name}} </mat-card-title>
-        <mat-card-subtitle>Available seats: {{tour.availableSeats}} </mat-card-subtitle>
-        <mat-card-content>
-          <p> {{tour.rating}} stars </p>
-          <p> {{tour.price}} $ </p>
-          <p> Discount -{{tour.discount}}% </p>
-        </mat-card-content>
+        <mat-card-title [routerLink]="['/tour-details', tour._id]" class="tour-name">{{tour.name}} | {{tour.price}} $</mat-card-title>
+        <mat-card-subtitle>
+          Available seats: {{tour.availableSeats}} | {{tour.rating}} stars | Discount -{{tour.discount}}%
+        </mat-card-subtitle>
       </mat-card-header>
       <img src="{{tour.imageUrl}}" alt="Photo of tour {{tour.name}}">
       <mat-card-content>
@@ -67,7 +69,7 @@
       </mat-card-content>
       <mat-card-actions>
         <button mat-button [routerLink]="['/tour-details', tour._id]"> More info </button>
-        <button mat-button (click)="bookTour(tour)"> Book Tour {{tour.name}} </button>
+        <button mat-button (click)="bookTour(tour)"> Book tour {{tour.name}} </button>
       </mat-card-actions>
     </mat-card>
     <!-- <button mat-button (click)="addTour()">Create Tour</button> -->
