--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,10 @@
-<button mat-button routerLink="/booking">Check booking</button>
-<button mat-button (click)="onSignout()">Sign out</button>
-
 <div *ngIf="((user$ | async) != null)">
     <div>User:  {{(user$ | async).username}}</div>
     <div>Email:  {{(user$ | async).email}} </div>
 </div>
+<button mat-raised-button (click)="onSignout()">Sign out</button>
+<button mat-raised-button>My booking history</button>
+
+<button mat-raised-button routerLink="/booking">My booking</button>
+
+
