update user page

--- a/src/app/user/auth/signup/signup.component.html
+++ b/src/app/user/auth/signup/signup.component.html
@@ -7,16 +7,19 @@
     <mat-form-field>
       <input matInput type="text" placeholder="Username" formControlName="username">
       <mat-icon matSuffix>person</mat-icon>
+      <mat-error *ngIf="signupForm.get('username').invalid && (signupForm.get('username').dirty || signupForm.get('username').touched)">Username required</mat-error>
     </mat-form-field>
 
     <mat-form-field>
       <input matInput type="text" placeholder="Email" formControlName="email">
       <mat-icon matSuffix>email</mat-icon>
+      <mat-error *ngIf="signupForm.get('email').invalid && (signupForm.get('email').dirty || signupForm.get('email').touched)">Invalid email</mat-error>
     </mat-form-field>
 
     <mat-form-field>
       <input matInput type="text" placeholder="Password" formControlName="password">
-      <mat-icon matSuffix>visibility</mat-icon>
+      <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+      <mat-error *ngIf="signupForm.get('password').invalid && (signupForm.get('password').dirty || signupForm.get('password').touched)">Password required (at least 6 characters)</mat-error>
     </mat-form-field>
     
     <button mat-raised-button type="submit">Sign up</button>
