--- a/src/app/user/auth/signin/signin.component.html
+++ b/src/app/user/auth/signin/signin.component.html
@@ -7,11 +7,13 @@
     <mat-form-field>
       <input matInput type="text" placeholder="Email" formControlName="email">
       <mat-icon matSuffix>email</mat-icon>
+      <mat-error *ngIf="signinForm.get('email').invalid && (signinForm.get('email').dirty || signinForm.get('email').touched)">Invalid email</mat-error>
     </mat-form-field>
     
     <mat-form-field>
       <input matInput type="text" placeholder="Password" formControlName="password">
-      <mat-icon matSuffix>visibility</mat-icon>
+      <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+      <mat-error *ngIf="signinForm.get('password').invalid && (signinForm.get('password').dirty || signinForm.get('password').touched)">Password required (at least 6 characters)</mat-error>
     </mat-form-field>
 
     <button mat-raised-button type="submit">Sign in</button>
