--- a/src/app/user/auth/signup/signup.component.html
+++ b/src/app/user/auth/signup/signup.component.html
@@ -17,14 +17,14 @@
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput type="text" placeholder="Password" formControlName="password">
-      <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+      <input matInput [type]="hidePassword ? 'password' : 'text'" placeholder="Password" formControlName="password">
+      <mat-icon matSuffix (click)="hidePassword = !hidePassword">{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
       <mat-error *ngIf="signupForm.get('password').invalid && (signupForm.get('password').dirty || signupForm.get('password').touched)">Password required (at least 6 characters)</mat-error>
     </mat-form-field>
     
-    <button mat-raised-button type="submit">Sign up</button>
+    <button mat-raised-button type="submit" class="signup-button">Sign up</button>
     <a routerLink="/signin">Sign in instead</a>
   </mat-card>
 
-  <a routerLink="." >Forgot password</a>
+  <a >Forgot password</a>
 </form>
