--- a/src/app/user/auth/signin/signin.component.html
+++ b/src/app/user/auth/signin/signin.component.html
@@ -11,15 +11,15 @@
     </mat-form-field>
     
     <mat-form-field>
-      <input matInput type="text" placeholder="Password" formControlName="password">
-      <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+      <input matInput [type]="hidePassword ? 'password' : 'text'" placeholder="Password" formControlName="password">
+      <mat-icon matSuffix (click)="hidePassword = !hidePassword">{{hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
       <mat-error *ngIf="signinForm.get('password').invalid && (signinForm.get('password').dirty || signinForm.get('password').touched)">Password required (at least 6 characters)</mat-error>
     </mat-form-field>
 
-    <button mat-raised-button type="submit">Sign in</button>
+    <button mat-raised-button type="submit" class="signin-button">Sign in</button>
     <a routerLink="/signup">Sign up instead</a>
   </mat-card>
 
-  <a routerLink="." >Forgot password</a>
+  <a >Forgot password</a>
 
 </form>
