--- a/src/app/booking/booking.component.html
+++ b/src/app/booking/booking.component.html
@@ -29,7 +29,7 @@
         Total bookings: {{bookings.length}}
       </mat-card-subtitle>
     </mat-card>
-    <button mat-raised-button class="margin-3">
+    <button mat-raised-button class="margin-3" (click)="updateBooking()">
       Check out
     </button>
     <div class="margin-3">
